# 3D-Reconstructrion-Scanner

./: .gitignore  CMakeLists.txt  Doxyfile.bak  README.md  Reconstruction.cpp  Reconstruction.h  icp.cpp  icp.h  index.dox  main.cpp  poisson_open3d.py  ~main.cpp
Data/: results.txt
Meshes/: pcl_poisson_mesh.ply  poisson_open3d.ply  poisson_open3d_after_removal.ply  poisson_open3d_after_removal_target_cloud_scaled_aligned.ply  poisson_open3d_target_cloud_scaled_aligned.ply
Meshes_backup/: Note.txt  pcl_poisson_mesh.ply  poisson_open3d.ply  poisson_open3d_after_removal.ply  poisson_open3d_after_removal_target_cloud_scaled_aligned.ply  poisson_open3d_target_cloud_scaled_aligned.ply
html/: Reconstruction_8h.html  Reconstruction_8h__incl.map  Reconstruction_8h__incl.md5  Reconstruction_8h_source.html  annotated.html  classPoints3D-members.html  classPoints3D.html  classPoints3D__coll__graph.map  classPoints3D__coll__graph.md5  classPoints3Dvec-members.html  classPoints3Dvec.html  classReconstruction-members.html  classReconstruction.html  classaPoint-members.html  classaPoint.html  classes.html  classicp-members.html  classicp.html  files.html  functions.html  functions_func.html  graph_legend.html  icp_8h.html  icp_8h__incl.map  icp_8h__incl.md5  icp_8h_source.html  index.html  md_README.html  menudata.js  pages.html  rply_8h_source.html  structt__ply__-members.html  structt__ply__.html  structt__ply____coll__graph.map  structt__ply____coll__graph.md5  structt__ply__argument__-members.html  structt__ply__argument__.html  structt__ply__argument____coll__graph.map  structt__ply__argument____coll__graph.md5  structt__ply__element__-members.html  (+15 more)
latex/: Reconstruction_8h.tex  Reconstruction_8h__incl.md5  annotated.tex  classPoints3D.tex  classPoints3D__coll__graph.md5  (+22 more)
(+26 files in other folders)
